# zentra-docs

./: .env.example  .gitignore  README.md  SECURITY.md  next.config.mjs  package.json  source.config.ts
.github/workflows/: ci.yml
content/docs/: index.mdx  meta.json  quickstart.mdx
contracts/: deploy.sh
contracts/zentra-action-log/: Cargo.toml
contracts/zentra-action-log/src/: lib.rs  test.rs
contracts/zentra-action-log/test_snapshots/test/: bumps_author_reputation.1.json  emits_recorded_event.1.json  recent_is_newest_first.1.json  record_degrades_when_reputation_rejects.1.json  records_and_counts.1.json  rejects_empty_message.1.json
contracts/zentra-feedback/: Cargo.toml
contracts/zentra-multisig/: Cargo.toml
contracts/zentra-multisig/src/: lib.rs  test.rs
contracts/zentra-multisig/test_snapshots/test/: emits_proposed_approved_and_executed_events.1.json  exposes_constructed_signers_and_threshold.1.json  non_signer_cannot_approve.1.json  non_signer_cannot_propose.1.json  rejects_approval_of_missing_proposal.1.json  rejects_double_approval_by_the_same_signer.1.json  rejects_double_execution.1.json  rejects_execute_below_threshold.1.json  two_of_three_proposes_approves_and_executes.1.json
contracts/zentra-proof-registry/: Cargo.toml
contracts/zentra-proof-registry/src/: lib.rs  test.rs
contracts/zentra-proof-registry/test_snapshots/test/: anchors_and_counts.1.json  emits_anchored_event.1.json
contracts/zentra-reputation/: Cargo.toml
contracts/zentra-reputation/src/: lib.rs  test.rs
contracts/zentra-reputation/test_snapshots/test/: bumps_and_reads_score.1.json  emits_bumped_event.1.json  rejects_unregistered_logger.1.json  set_logger_emits_event.1.json
db/: schema.sql
db/migrations/: 001_harden_feedback.sql  002_users_and_moderation.sql
docs/: API.md  ARCHITECTURE.md  BELT-CHECKLIST.md  LAUNCH.md  MAINNET.md  SECURITY-REVIEW.md  USER-GUIDE.md
docs/articles/: soroban-action-log-tutorial.md
docs/screenshots/: README.md
docs/users/: README.md  onboarding-responses.csv
public/: zk-worker.js
public/zk/: payment_policy.wasm  payment_policy.zkey
src/app/: global-error.tsx  global.css  layout.tsx  not-found.tsx  sitemap.ts
src/components/: mdx.tsx  protocol-facts.tsx  public-inputs-table.tsx
src/config/: contract.ts  network.ts  protocol.ts  stellar.ts
(+149 files in other folders)
