[package]
name = "zentra-action-log"
version = "0.1.0"
edition = "2021"
description = "On-chain action log for the Zentra dApp — record, read, and stream verifiable actions on Soroban."

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "26.1.0"

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
