[package]
name = "zentra-proof-registry"
version = "0.1.0"
edition = "2021"
description = "Anchor zero-knowledge proofs on-chain for the Zentra dApp — record proof commitments on Soroban."

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "26.1.0"

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
