[package]
name = "zentra-reputation"
version = "0.1.0"
edition = "2021"
description = "Per-author reputation for the Zentra dApp — bumped by the Action Log via a cross-contract call."

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "26.1.0"

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
